--- a/src/navigation/turtlebot3_navigation/param/teb_local_planner_params.yaml
+++ b/src/navigation/turtlebot3_navigation/param/teb_local_planner_params.yaml
@@ -14,32 +14,23 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 0.4
+ max_vel_x: 0.8 #0.4
  max_vel_x_backwards: 0.2
  max_vel_theta: 0.3
  acc_lim_x: 0.5
  acc_lim_theta: 0.5
  min_turning_radius: 0.0
- footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "point"
-   radius: 0.2 # for type "circular"
-   line_start: [-0.3, 0.0] # for type "line"
-   line_end: [0.3, 0.0] # for type "line"
-   front_offset: 0.2 # for type "two_circles"
-   front_radius: 0.2 # for type "two_circles"
-   rear_offset: 0.2 # for type "two_circles"
-   rear_radius: 0.2 # for type "two_circles"
-   vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
+
 
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
+ xy_goal_tolerance: 0.12
  yaw_goal_tolerance: 0.1
  free_goal_vel: False
     
  # Obstacles
     
- min_obstacle_dist: 0.4
+ min_obstacle_dist: 0.2
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
